<resources>
    <string name="app_name">LuigiFeliceRM94546</string>
    <string name="nome_da_praia">Nome da praia</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="incluir">Incluir</string>
    <string name="limpar_lista">Limpar lista</string>
    <string name="excluir">Excluir</string>
    <string name="pinpoint">Pinpoint</string>
    <string name="guia_das_praias">Guia das Praias</string>
    <string name="title_activity_presentation">Presentation</string>
    <string name="feito_por">Feito por</string>
    <string name="criadores">Criadores</string>
    <string name="ir_para_o_app">ir para o app</string>
</resources>