<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feito_por"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/creators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:drawablePadding="8dp"
        android:paddingStart="8dp"
        android:text="@string/criadores"
        android:paddingEnd="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_para_o_app" />

</LinearLayout>