<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="#FAFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guia_das_praias"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_margin="8dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/nameBeach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_da_praia"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginBottom="12dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cidade"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginBottom="12dp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estado"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:padding="12dp"
        android:text="@string/incluir"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/clearList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:padding="12dp"
        android:text="@string/limpar_lista"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>